# upod

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  checkopt.def  config.cache  config.h  config.h.in  config.status  configure  configure.in  system.h  upod.1  upod.c  upod.lsm  upod.lsm.in  upod.spec  upod.spec.in
include/: Makefile.am  genre.h  itunesdb.h  itunesdbi.h  upod.h  upodi.h
libupod/: .gdb_history  Makefile  Makefile.am  a.out  aac.c  abhm.c  add.c  add_dir.c  aihm.c  album.c  artworkdb.c  checks.c  cksum.c  create.c  database.c  db.c  db_lookup.c  device_info.c  dohm.c  dshm.c  endian.c  fihm.c  genre.c  genre.h  hexdump.c  hide.c  iTunesDB  iTunesDB-1song  id3.c  iihm.c  image_list.c  inhm.c  ipod.c  itunesdb.h  itunesdbi.h  itunessd.c  list.c  log.c  lookup.c  mp3.c  (+19 more)
src/: Makefile.am  add.c  add_dir.c  hide.c  ipod_update.c  list.c  pl.c  remove.c  unhide.c
