dnl Process this file with autoconf to produce a configure script.

AC_INIT(upod.c)
dnl Every other copy of the package version number gets its value from here
AM_INIT_AUTOMAKE(upod, 0.1.0)

AH_TOP(
#undef __darwin__
#undef HAVE_UINT64
)

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AM_CONFIG_HEADER(include/config.h)

AC_SUBST(VERSION)

ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)

AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC

AC_PROG_LIBTOOL
AM_PROG_LIBTOOL

PKG_CHECK_MODULES(GLIB, glib-2.0)
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)
LIBS="$LIBS $GLIB_LIBS"
CPPFLAGS="$CPPFLAGS $GLIB_CFLAGS"

CPPFLAGS="$CPPFLAGS -I/sw/include"
AC_CHECK_HEADERS([magick/api.h wand/magick_wand.h iconv.h])

LIBS="$LIBS -L/sw/lib"
AC_CHECK_LIB(Magick, AppendImages)
AC_CHECK_LIB(Wand, DestroyMagickWand)
AC_CHECK_LIB(iconv, libiconv_open)

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h sys/param.h sys/time.h time.h sys/mkdev.h sys/sysmacros.h string.h memory.h fcntl.h dirent.h sys/ndir.h ndir.h alloca.h locale.h )

dnl jm_CHECK_TYPE_STRUCT_UTIMBUF
AC_HEADER_MAJOR
AC_FUNC_ALLOCA
dnl AC_STRUCT_TM
dnl AC_STRUCT_ST_BLOCKS
dnl AC_FUNC_CLOSEDIR_VOID
AC_CHECK_FUNCS(mkfifo)
AC_CHECK_FUNC(mknod)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.


AC_MSG_CHECKING(whether to build for macosx)
case $host in
  *-darwin*)
    osx_support=yes
    AC_MSG_RESULT(yes)
    AC_DEFINE(__darwin__)
    AC_SUBST(MACOSX)
    ;;
  *)
    osx_support=no
    AC_MSG_RESULT(no)
    ;;
esac

AM_CONDITIONAL(MACOSX, test "$osx_support" = "yes")
AC_CHECK_TYPE(u_int64_t)
AC_OUTPUT(
Makefile
libupod/Makefile
include/Makefile
src/Makefile
upod.lsm
)
