dnl Process this file with autoconf to produce a configure script.

AC_INIT(libupod/db.c)
dnl Every other copy of the package version number gets its value from here
AM_INIT_AUTOMAKE(upod, 0.1.1)

AH_TOP(
#undef __darwin__
#undef HAVE_UINT64
#undef HAVE_GLIB
)

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AM_CONFIG_HEADER(include/config.h)

AC_SUBST(VERSION)

ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)

AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC

AC_PROG_LIBTOOL
AM_PROG_LIBTOOL

dnl glib=yes

dnl AC_MSG_CHECKING(whether to use glib)
dnl AC_ARG_WITH(glib,
dnl [  --with-glib     Include glib support (default)
dnl  --without-glib  Don't include glib support],
dnl [ case "$withval" in
dnl  yes)
dnl    glib=yes
dnl    ;;
dnl  *)
dnl    glib=no
dnl    AC_MSG_RESULT(no)
dnl    ;;
dnl  esac],
dnl [
dnl  if test "x$glib" = "xno"; then
dnl    AC_MSG_RESULT(no)
dnl  fi
dnl ]
dnl)

dnl if test "x$glib" = "xyes"; then
dnl   AC_MSG_RESULT(yes)
dnl
dnl   PKG_CHECK_MODULES(GLIB, glib-2.0)
dnl   AC_SUBST(GLIB_CFLAGS)
dnl   AC_SUBST(GLIB_LIBS)
dnl   if test "x$GLIB_CFLAGS" = "x"; then
dnl      AC_MSG_WARN(Compiling without glib)
dnl   else
dnl      AC_DEFINE_UNQUOTED(HAVE_GLIB)
dnl   fi
dnl
dnl   LIBS="$LIBS $GLIB_LIBS"
dnl   CPPFLAGS="$CPPFLAGS $GLIB_CFLAGS"
dnl fi

dnl Optional libraries
CPPFLAGS="$CPPFLAGS -I/sw/include"
AC_CHECK_HEADERS([magick/api.h wand/magick_wand.h])

LIBS="$LIBS -L/sw/lib"
libiconv=yes

AC_MSG_CHECKING(whether to use libiconv)
AC_ARG_WITH(libiconv,
[  --with-libiconv     Include libiconv support (default)
  --without-libiconv  Don't include libiconv support],
[ case "$withval" in
  yes)
    libiconv=yes
    ;;
  *)
    libiconv=no
    AC_MSG_RESULT(no)
    ;;
  esac],
[
  if test "x$libiconv" = "xno"; then
    AC_MSG_RESULT(no)
  fi
]
)

if test "x$libiconv" = "xyes"; then
    AC_MSG_RESULT(yes)

    AC_CHECK_HEADERS([iconv.h])
    AC_CHECK_LIB(iconv, libiconv_open)
fi

dnl libWand is needed to modify any ArtworkDB
AC_CHECK_LIB(Magick, AppendImages)
AC_CHECK_LIB(Wand, DestroyMagickWand)



dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h sys/param.h sys/time.h time.h sys/mkdev.h sys/sysmacros.h string.h memory.h fcntl.h dirent.h sys/ndir.h ndir.h alloca.h locale.h )

dnl jm_CHECK_TYPE_STRUCT_UTIMBUF
AC_HEADER_MAJOR
AC_FUNC_ALLOCA
dnl AC_STRUCT_TM
dnl AC_STRUCT_ST_BLOCKS
dnl AC_FUNC_CLOSEDIR_VOID
AC_CHECK_FUNCS(mkfifo)
AC_CHECK_FUNC(mknod)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.


AC_MSG_CHECKING(whether to build for macosx)
case $host in
  *-darwin*)
    osx_support=yes
    AC_MSG_RESULT(yes)
    AC_DEFINE(__darwin__)
    AC_SUBST(MACOSX)
    ;;
  *)
    osx_support=no
    AC_MSG_RESULT(no)
    ;;
esac

AM_CONDITIONAL(MACOSX, test "$osx_support" = "yes")
AC_CHECK_TYPE(u_int64_t)
AC_OUTPUT(
Makefile
libupod/Makefile
include/Makefile
src/Makefile
upod.lsm
)
