bin_PROGRAMS = itdbadd itdbremove itdbhide itdbunhide itdblist itdbadddir itdbpl

CFLAGS += -ansi
LDFLAGS += $(top_srcdir)/libupod/libupod.la
INCLUDES += -I../include

itdbadd_SOURCES = add.c
itdbremove_SOURCES = remove.c
itdbhide_SOURCES = hide.c
itdbunhide_SOURCES = unhide.c
itdblist_SOURCES = list.c
itdbadddir_SOURCES = add_dir.c
itdbpl_SOURCES = pl.c
