bin_PROGRAMS = itdbadd itdbremove itdbhide itdbunhide itdblist itdbadd_dir itdbpl itdbupdate

INCLUDES = -I$(top_srcdir)/include


itdbadd_SOURCES = add.c
itdbadd_LDADD = $(top_srcdir)/libupod/libupod.la
itdbadd_LDFLAGS = -multiply_defined suppress
itdbadd_DEPENDENCIES = $(top_srcdir)/libupod/libupod.la

itdbremove_SOURCES = remove.c
itdbremove_LDADD = $(top_srcdir)/libupod/libupod.la
itdbremove_LDFLAGS = -multiply_defined suppress
itdbremove_DEPENDENCIES = $(top_srcdir)/libupod/libupod.la

itdbhide_SOURCES = hide.c
itdbhide_LDADD = $(top_srcdir)/libupod/libupod.la
itdbhide_LDFLAGS = -multiply_defined suppress
itdbhide_DEPENDENCIES = $(top_srcdir)/libupod/libupod.la

itdbunhide_SOURCES = unhide.c
itdbunhide_LDADD = $(top_srcdir)/libupod/libupod.la
itdbunhide_LDFLAGS = -multiply_defined suppress
itdbunhide_DEPENDENCIES = $(top_srcdir)/libupod/libupod.la

itdblist_SOURCES = list.c
itdblist_LDADD = $(top_srcdir)/libupod/libupod.la
itdblist_LDFLAGS = -multiply_defined suppress
itdblist_DEPENDENCIES = $(top_srcdir)/libupod/libupod.la

itdbadd_dir_SOURCES = add_dir.c
itdbadd_dir_LDADD = $(top_srcdir)/libupod/libupod.la
itdbadd_dir_LDFLAGS = -multiply_defined suppress
itdbadd_dir_DEPENDENCIES = $(top_srcdir)/libupod/libupod.la

itdbpl_SOURCES = pl.c
itdbpl_LDADD = $(top_srcdir)/libupod/libupod.la
itdbpl_LDFLAGS = -multiply_defined suppress
itdbpl_DEPENDENCIES = $(top_srcdir)/libupod/libupod.la

itdbupdate_SOURCES = ipod_update.c
itdbupdate_LDADD = $(top_srcdir)/libupod/libupod.la
itdbupdate_LDFLAGS = -multiply_defined suppress
itdbupdate_DEPENDENCIES = $(top_srcdir)/libupod/libupod.la
